2008-12-31        dain

	* cmd.c: Added '#option list' to print all options and explanatory
	  text.
	* powwow.6: Supprt automatically converting man page to different
	  encodings by setting MAN_PAGE_ENCODING when running
	  configure. Defaults to UTF-8 on all hosts except OS X (darwin),
	  where it is ISO-8859-1.
	* build: Fixed build out of the box on OS X by turning on
	  --enable-bsd by default on darwin hosts.
	* cmd2.c: Fixed some problems related to binding keys with the
	  high bit set.

2008-12-29        dain

	* tty.c: Manually buffer tty output to fix output problems on some
	  platforms with USE_LOCALE.
	* edit.c: Fixed display bug when a partial ANSI code was received
	  in one TCP packet

2008-01-09 21:35  bpk

	* README, main.c, powwow.6, powwow.doc: Converted some stuff to
	  utf8, updated Dain's email from Dain

2008-01-09 21:33  bpk

	* beam.c: Convert TITLE env variable according to locale from Dain

2008-01-09 21:32  bpk

	* README, configure.in, debian/changelog: More version bumps

2008-01-09 21:31  bpk

	* powwow.doc: Version number bump

2007-10-10 16:25  bpk

	* utils.c: Switched to using pointers to save the last space
	  because counters could be off if there were ansi sequences

2007-10-09 21:46  bpk

	* debian/control: Version isn't a valid keyword

2007-10-09 20:25  bpk

	* debian/changelog, debian/control: Fix debian version numbers

2007-10-09 20:18  bpk

	* configure.in, powwow.6, powwow.doc: Version bump

2007-10-09 20:15  bpk

	* utils.c: This should change the option +wrap to do word wrapping
	  instead of just line wrapping
	* cmd.c: Don't try and load non-.so files in cmd_module

2007-03-08 06:30  bpk

	* ptr.c, ptr.h: This should again fix the double-free bug that was
	  once fixed in perlwow

2006-12-07 22:12  bpk

	* debian/changelog, debian/control: Fixed version numbers

2006-11-08 17:12  bpk

	* cmd2.c: This fixed #bind and #rebind problems, patch from kalev
	  lember

2006-10-20 23:47  bpk
